# murexDB

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  clippy.toml
.github/workflows/: ci.yml
crates/client/: Cargo.toml
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: db.rs  handler.rs  main.rs
rfcs/: RFC-0001-project-vision.md  RFC-0002-network-protocol.md  RFC-0003-project-architecture.md  RFC-0004-concurrency-model.md
